[tool.poetry]
name = "crimpd"
version = "0.1.0"
description = ""
authors = ["tzou2024 <tzou@olin.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
python-dotenv = "^1.0.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.5"
Flask-Login = "^0.6.3"
Flask-JWT-Extended = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
